syntax = "proto3";

import "google/protobuf/wrappers.proto";

package houseservice;

message House {
  google.protobuf.Int32Value id = 1;
  google.protobuf.StringValue streetname = 2;
  google.protobuf.StringValue housenumber = 3;
  google.protobuf.Int32Value squarefeet = 4;
  google.protobuf.Int32Value numberOfBedrooms = 5;
  google.protobuf.BoolValue onSale = 6;
  google.protobuf.BoolValue isRental = 7;
}

service HouseService {
  rpc GetHousesBySize(HousesBySizeRequest) returns (HousesBySizeResponse) {}
  rpc GetHouse(HouseRequest) returns (HouseResponse) {}
  rpc GetHouses(HousesRequest) returns (HousesResponse) {}
}

message HousesBySizeRequest {
  int32 minsquarefeet = 1;
}

message HousesBySizeResponse {
  repeated int32 ids = 1;
}

message HouseRequest {
  int32 id = 1;
}

message HouseResponse {
  House house = 1;
}

message HousesRequest {
  repeated int32 ids = 1;
}

message HousesResponse {
  repeated House house = 1;
}